--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
       <input type="text" />
       <input type="submit" value="Submit"/>
     </form>
-    <div id="result"></div>
+    <div id="result">""</div>
     <script type="text/javascript" src="./script.js"></script>
 </body>
 
