--- a/main.html
+++ b/main.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-</head>
-
-<body>
-    <form id="form">
-      <input type="text" />
-      <input type="submit" value="Submit"/>
-    </form>
-    <div id="result">""</div>
-    <script type="text/javascript" src="./script.js"></script>
-</body>
-
+	<head>
+		
+	</head>
+	<body>
+		<form id="form" onsubmit = "minCostToFormRope(event)">
+			<input type="text" />
+			<input type="submit" value="Submit"/>
+		</form>
+		<div id="result">""</div>
+		<script type="text/javascript" src="./script.js"></script>
+	</body>
 </html>
